[project]
name = "keyword-extraction"
version = "1.0.0"
description = "Multi-model keyword extraction system for document analysis"
authors = [
    {name = "ML Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.1.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "tokenizers>=0.12.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "nltk>=3.7",
    "konlpy>=0.6.0",
    "wordcloud>=1.8.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keyword_extraction"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
